# Log_Analyzer

./: CMakeLists.txt  README.md  run.sh
include/: LogEntry.h  LogParser.h  ReportGenerator.h
logs/: generate_logs.sh
reports/: error_report.txt
src/: LogParser.cpp  ReportGenerator.cpp  main.cpp
tests/: test_main.cpp
